fix horizontal overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   height: 100vh;
   width: 100vw;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .App-logo {
